--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="header">
-        <h1>🎉 Happy Birthday!🎉</h1>
+        <h1>🎉 Happy Birthday Adetutu!🎉</h1>
         
         <p>Click each card to reveal a special message</p>
         
